Fix alignment

--- a/style.css
+++ b/style.css
@@ -110,14 +110,36 @@
 .header-bottom-left {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
-  background: #c0c0c0;
 
-  display: flex;
+/*   display: flex;
   align-items: center;
   justify-content: flex-start;
   gap: 1rem; 
   background-color: transparent;
-  padding-right: 10px;
+  padding-right: 10px; */
+  /* Nested grid */
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 1fr 1fr;
+}
+
+.header-bottom-left > .cat {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  width: 40px;
+  height: 40px;
+  fill: yellowgreen;
+  border-radius: 50%;
+}
+
+.header-bottom-left >h4 {
+  grid-column: 2 / 6;
+  grid-row: 1 / 2;
+}
+
+.header-bottom-left >p {
+  grid-column: 2 / 6;
+  grid-row: 2 / 3;
 }
 
 .header-bottom-right {
@@ -128,7 +150,7 @@
   /* nested flexbox*/
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   gap: 1rem;
   background-color: transparent;
   padding-right: 10px;
@@ -317,6 +339,7 @@
   border-radius: 8px;
   padding: 5px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  align-items: center;
 
   /* nested grid  */
   display: grid;
@@ -327,7 +350,6 @@
 }
 
 .trending-left {
-  border: 1px solid #999; /* shows the grid cell boundaries REMOVE*/
   grid-row: 1 / 3;
   row-gap: 20rem;
   align-content: space-evenly;
@@ -339,8 +361,23 @@
   gap: 20rem;
 }
 
+.trending-left > .bee {
+  fill: red;
+}
+
+.trending-left > .butterfly {
+  fill: yellow;
+}
+
+.trending-left > .mushroom {
+  fill: orange;
+}
+
+.trending-left > .rabbit {
+  fill: pink;
+}
+
 .trending-right {
-  border: 1px solid #999; /* shows the grid cell boundaries REMOVE*/
   grid-row: 1 / 3;
   row-gap: 20rem;
   align-content: space-evenly;
